# tether

./: .gitignore  LICENSE  NOTES-FOR-BLOG.md  README.md  TASKS.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
bench/: conditions.py  corpus.py  loader.py  metrics.py  run.py  selfcheck.py  warmup.py
blog-drafts/: tether-post.md
docs/superpowers/plans/: 2026-07-03-tether-v0.1-implementation.md  2026-07-03-tether-v0.2-consolidation.md  2026-07-03-tether-v0.2-semantic-search.md  2026-07-04-tether-associative-core.md  2026-07-04-tether-bench-associative-eval.md  2026-07-04-tether-seed-dominant-recall.md  2026-07-04-tether-tier-b1-self-organizing-store.md  2026-07-04-tether-tier-b2-crystallization.md
docs/superpowers/specs/: 2026-07-03-tether-design.md  2026-07-04-b1-usage-learning-spike.md  2026-07-04-tether-associative-core-design.md  2026-07-04-tether-bench-associative-eval-design.md  2026-07-04-tether-seed-dominant-recall-design.md  2026-07-04-tether-tier-b1-self-organizing-store-design.md  2026-07-04-tether-tier-b2-crystallization-design.md
scripts/: selftest.py
src/tether/: __init__.py  cli.py  config.py  crystallize.py  embed.py  graph.py  server.py  store.py  sync.py
tests/: test_bench.py  test_cli.py  test_config.py  test_crystallize.py  test_embed.py  test_graph.py  test_mcp.py  test_store.py  test_sync.py
