[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tether-memory"
version = "0.2.0"
description = "A shared memory layer for personal agents, across devices: an MCP server over local SQLite with opt-in libSQL/Turso sync."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "sidyellur", email = "20009719+sidyellur@users.noreply.github.com" }]
keywords = ["mcp", "memory", "agent", "sqlite", "libsql", "turso", "claude", "claude-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
]
dependencies = ["mcp>=1.0"]

[project.optional-dependencies]
sync = ["libsql-experimental>=0.0.30"]
semantic = ["model2vec>=0.3", "numpy>=1.21"]
dev = ["pytest>=7", "build", "numpy>=1.21"]

[project.scripts]
tether-memory = "tether.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/sidyellur/tether"
Issues = "https://github.com/sidyellur/tether/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tether"]
